1.2.1i2:
    Core:
    * Improved validation of inventory data reported by checks
    * Added -d option to precompiled checks to enable debug mode

    Event Console:
    * Moved source of Event Console into Check_MK project 
    * New button for resetting all rule hits counters
    * When saving a rule then its hits counter is always reset

    Multisite:
    * Enable automation login with _username= and _secret=, while
      _secret is the content of var/check_mk/web/$USER/automation.secret
    * FIX: Fixed releasing of locks and livestatus connections when logging out
    * FIX: Fixed login/login confusions with index page caching
    * FIX: Speed-o-meter: Fixed calculation of Check_MK passive check invervals
    * Removed focus of "Full name" attribute on editing a contact
    * Quicksearch: Convert search text to regex when accessing livestatus
    * FIX: WATO Folder filter not available when WATO disabled
    * WATO Folder Filter no longer available in single host views

    BI:
    * Added missing localizations
    * Added option bit_precompile_on_demand to split compilations of
      the aggregations in several fragments. If possible only the needed
      aggregations are compiled to reduce the time a user has to wait for
      BI based view. This optimizes BI related views which display
      information for a specific list of hosts or aggregation groups.
    * Added new config option bi_compile_log to collect statistics about
      aggregation compilations
    * Correct representation of (!), (!!) and (?) markers in check output

    WATO:
    * Added progress indicator in single site WATO "Activate Changes"
    * FIX: Implemented basic non HTTP 200 status code response handling in interactive
           progress dialogs (e.g. bulk inventory mode)
    * Users & Contacts: Case-insensitive sorting of 'Full name' column
    
    Checks & Agents:
    * New check mssql_counters.locks: Monitors locking related information of
      MSSQL tablespaces

1.2.0p3: