@@ -7,6 +7,7 @@
     * Moved source of Event Console into Check_MK project 
     * New button for resetting all rule hits counters
     * When saving a rule then its hits counter is always reset
+    * New feature of hiding certain actions from the commands in the status GUI
 
     Multisite:
     * Enable automation login with _username= and _secret=, while
